--- a/ss14_spring_security/thuc_hanh/spring_security/build.gradle
+++ b/ss14_spring_security/thuc_hanh/spring_security/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.7.1'
+	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.1'
+	implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.7.1'
+	implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
 }
 
 tasks.named('test') {
